# vulkan-vscode

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile.bat  first_app.cpp  first_app.hpp  lve_device.cpp  lve_device.hpp  lve_model.cpp  lve_model.hpp  lve_pipeline.cpp  lve_pipeline.hpp  lve_window.cpp  lve_window.hpp  main.cpp  testEnv.cpp
shaders/: simple_shader.vert
